k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-automation
  labels:
    name: e2e-automation
